# AuthenticationSystem

./: .env.example  README.md  pyproject.toml
authentication/: auth.py  authenticators.py  crypt.py  middleware.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_blacklistedtoken.py  0003_user_is_system.py
business_mock/: apps.py  services.py  urls.py  views_orders.py  views_products.py  views_stores.py
config/: settings.py  urls.py
permissions/: models.py  permissions.py  serializers.py  urls.py  views.py
permissions/management/commands/: setup_admin.py
permissions/migrations/: 0001_initial.py  0002_alter_accessrule_options_and_more.py  0003_role_is_default_role_role_is_guest.py  0004_businesselement_is_system.py
